<resources>
    <string name="app_name">Grabit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again_later">try again later\n\n</string>
    <string name="try_again">try again</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_desc">Check your internet connection</string>
    <string name="sort_by">Sort by:</string>
    <string name="max_price">Max Price:</string>
    <string name="games_shortcut_short_label">View current deals</string>
    <string name="games_shortcut_long_label">Scroll through all deals available from stores</string>
    <string name="games_shortcut_disabled_message">Sorry shortcut currently must be disabled</string>
    <string name="search_shortcut_short_label">Search for deals</string>
    <string name="search_shortcut_long_label">Search deals for a specific game</string>
    <string name="search_shortcut_disabled_message">Sorry shortcut currently must be disabled</string>
</resources>